--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^17.0.0",
+    "@prisma/client": "^6.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
+    "next": "14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.2.0",
-    "@prisma/client": "^6.2.0",
-    "clsx": "^2.1.1",
     "tailwind-merge": "^2.6.0",
-    "class-variance-authority": "^0.7.1",
-    "lucide-react": "^0.469.0",
-    "@hello-pangea/dnd": "^17.0.0"
+    "use-debounce": "^10.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "prisma": "^6.2.0",
-    "tsx": "^4.19.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.0.0",
-    "eslint-config-next": "15.1.0"
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.0",
+    "prisma": "^6.2.0",
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.19.0",
+    "typescript": "^5.3.0"
   }
 }
